# oop_exercise_03

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Figure.cpp  Figure.h  Makefile  Point.cpp  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Trapeze.cpp  Trapeze.h  cmake_install.cmake  main.cpp  oop_exercise_03  report.odt  test
Testing/Temporary/: CTestCostData.txt
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
gtests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rectangle_test.cpp  trapeze_test.cpp  unit_tests
tests/: test_01.result  test_01.test  test_02.result  test_02.test  test_03.result  test_03.test
